...
            }

            Tab("Discover", systemImage: "sparkles", value: .discover) {
                DiscoverView()
            }

            Tab("Search", systemImage: "magnifyingglass", value: .search, role: .search) {
                SearchView()
            }

            Tab("Downloads", systemImage: "arrow.down.circle", value: .downloads) {
                DownloadsView()
            }

            Tab("Requests", systemImage: "list.bullet.clipboard", value: .requests) {
                RequestsView()
            }
...
